--- a/_posts/2018-11-13-Python Study-2018.md
+++ b/_posts/2018-11-13-Python Study-2018.md
@@ -73,7 +73,7 @@ shape函数是numpy.core.fromnumeric中的函数，它的功能是**读取矩阵
 > 原文：<http://www.codebelief.com/article/2017/02/python-advanced-programming-list-comprehensions/>          
 ---
 
-### 1. 一个简单的例子
+#### 1. 一个简单的例子
 
 在Python中，如果我们想修改列表中所有元素的值，可以使用 `for` 循环语句来实现。
 
@@ -96,7 +96,7 @@ shape函数是numpy.core.fromnumeric中的函数，它的功能是**读取矩阵
 [1, 4, 9, 16, 25]
 ```
 
-### 2. 基本语法
+#### 2. 基本语法
 
 我们具体来分析上面给出的例子
 
@@ -111,7 +111,7 @@ shape函数是numpy.core.fromnumeric中的函数，它的功能是**读取矩阵
 - 循环变量表达式（ `x ** 2`）
 - `for` 循环头部（ `for x in L` ）
 
-### 3. 工作原理
+#### 3. 工作原理
 
 Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将每一次迭代的值赋给循环变量 `x` ，然后收集变量表达式 `x ** 2` 的计算结果，最终由这些结果构成了新的列表，也就是列表推导式所返回的值。
 
@@ -126,11 +126,11 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 'bcdef'
 ```
 
-### 4. 高级语法
+#### 4. 高级语法
 
 除了像上面介绍的 `[x ** 2 for x in L]` 这种基本语法之外，列表推导式还有一些高级的扩展。
 
-#### 4.1. 带有if语句
+##### 4.1. 带有if语句
 
 我们可以在 `for` 语句后面跟上一个 `if` 判断语句，用于过滤掉那些不满足条件的结果项。
 
@@ -143,7 +143,7 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 [1, 3, 5]
 ```
 
-#### 4.2. 带有for嵌套
+##### 4.2. 带有for嵌套
 
 在复杂一点的列表推导式中，可以嵌套有多个 `for` 语句。按照从左至右的顺序，分别是外层循环到内层循环。
 
@@ -154,7 +154,7 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 ['aj', 'ak', 'bj', 'bk']
 ```
 
-#### 4.3. 既有if语句又有for嵌套
+##### 4.3. 既有if语句又有for嵌套
 
 列表推导式可以带任意数量的嵌套 `for` 循环，并且每一个 `for` 循环后面都有可选的 `if` 语句。
 
@@ -187,7 +187,7 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 [(0, 1), (0, 3), (2, 1), (2, 3), (4, 1), (4, 3)]
 ```
 
-#### 4.4. 列表推导式生成矩阵
+##### 4.4. 列表推导式生成矩阵
 
 生成矩阵的方式有多种，例如手动赋值、一般for循环，还有就是列表推导式。如果我们要用列表推导式生成下面的矩阵，可以怎么写？
 
@@ -225,13 +225,13 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 当然，在实际的应用中不能单纯追求代码的简洁，还要考虑到代码的可读性和维护成本。
 如果代码变得过于复杂，不易于理解，我们宁可多写几行代码来增加它的可读性。
 
-### 5. 生成器表达式
+#### 5. 生成器表达式
 
 生成器表达式与列表推导式的语法相同，区别在于生成器表达式的外面使用圆括号，而列表推导式使用方括号。
 
 有关生成器的介绍，请参考这篇文章：[《Python高级编程之初识生成器》](http://www.codebelief.com/article/2017/02/python-advanced-programming-generator/)
 
-### 6. 集合推导式和字典推导式
+#### 6. 集合推导式和字典推导式
 
 注意：集合推导式和字典推导式只有在Python2.7以及之后的版本中才有，Python2.7之前的版本不支持这两种推导式。
 
@@ -254,4 +254,3 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 >>> D
 {1: 'a', 2: 'b', 3: 'c'}
 ```
-
