--- a/_posts/2018-11-13-Python Study-2018.md
+++ b/_posts/2018-11-13-Python Study-2018.md
@@ -254,3 +254,32 @@ Python在执行列表推导式时，会对可迭代对象 `L` 进行迭代，将
 >>> D
 {1: 'a', 2: 'b', 3: 'c'}
 ```
+
+### narray_split
+#### 功能
+
+可以用于把narray分成几份。
+
+#### 示例：
+numpy.plit(ary, indices_or_sections, axis=0)
+
+```python
+x = np.arange(9.0)
+np.split(x, 3)
+>>> [array([ 0.,  1.,  2.]), array([ 3.,  4.,  5.]), array([ 6.,  7.,  8.])]
+
+x = np.arange(8.0)
+ np.split(x, [3, 5, 6, 10])
+>>> [array([ 0.,  1.,  2.]), array([ 3.,  4.]), array([ 5.]), array([ 6.,  7.]), 
+```
+
+
+
+array_splitg 功能与 split 一样，唯一的区别是 array_split allows indices_or_sections to be an integer that does not equally divide the axis.
+
+```python
+x = np.arange(8.0)
+np.array_split(x,3)
+>>> [array([ 0.,  1.,  2.]), array([ 3.,  4.,  5.]), array([ 6.,  7.])]
+```
+
